--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     <h4 class="subheading">FrontEnd Devloper <a href="https://stefanini.com/en/">(Stefanini IT)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">And I was invited to work in the big company: Stefanini. There I have developed the FrontEnd project for an intern product (Account Management for Banks) of Stefanini. And I have used HTML5, CSS3, JavaScript, jQuery, Ajax, Web Services, PostgreSQL, SVN, ReactJS, JavaScript ES6, JSON, REST, BOWER, GULP, JUNIT, MAVEN, Bootstrap and in some other applications I used Materialize.</p>
+                                    <p class="text-muted">I was invited to work in the big company, Stefanini. While there I have developed a FrontEnd project for an Account Management System for Banks. The technologies I have used there were: HTML5, CSS3, JavaScript, jQuery, Ajax, Web Services, PostgreSQL, SVN, ReactJS, JavaScript ES6, JSON, REST, BOWER, GULP, MAVEN, Bootstrap and Materialize.</p>
                                 </div>
                             </div>
                         </li>
@@ -181,10 +181,10 @@
                                     <h4 class="subheading">Team Development Leader <a href="http://www.superabiz.com.br/2014/"> (Superabiz)</a>  </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Back to Brazil full of great expectations I got a good step in my career and I went to work with Superabiz/Fluig Totvs. There I was responsible for leading a development time, deployment and customization the <a href="https://en.fluig.com/">TOTVS Fluig Solution</a> – that is a new and great platform in Brazil and it contains ECM (Enterprise Content Management), BPM (Business Process Management), WCM (Web Content Management), Social, Identity, Analytics and ESB (Enterprise Service Bus). The development and customization was developed with JavaScript, Jquery, Bootstrap, HTML5, CSS3, Web Service, Rest and BPM Notation. <br> I was also responsible for:
+                                        <p class="text-muted">Upon returning to Brazil I stepped up in my career and I went to work with Superabiz/Fluig Totvs. There I was responsible for leading a development team, deploying and customizing the <a href="https://en.fluig.com/">TOTVS Fluig Solution</a> – a new and great platform in Brazil that contains ECM (Enterprise Content Management), BPM (Business Process Management), WCM (Web Content Management), Social, Identity/Single Sign- on, Analytics and ESB (Enterprise Service Bus). The development and customization was done using JavaScript, Jquery, Bootstrap, HTML5, CSS3, Web Service, Rest and BPM Notation. <br> While there I was also responsible for:
 										<ul class="text-muted">
 											<li> Requirements elicitation / process engineering.</li>
-											<li> Development technical documentation.</li>
+											<li> Development of technical documentation.</li>
 											<li> Conducting training for the users.</li>
 											<li> Projects carried out for those companies (Afeet Group, ADESTE Group, Grafite Fairs and Teresa Perez Tourism)</li>
 										</ul>
@@ -202,7 +202,7 @@
                                     <h4 class="subheading">Au Pair/Nanny (Ireland)</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">And as I needed to improve my English skills I went to work as Au Pair/Nanny with a lovely Irish family. The experiences with kids and host parents were great for my auto development.</p>
+                                   <p class="text-muted">As I needed to improve my English skills I went to work as Au Pair/Nanny with a lovely Irish family. The experiences with kids and host parents were great for my personal development.</p>
                                 </div>
                             </div>
                         </li>
@@ -216,7 +216,7 @@
                                     <h4 class="subheading">IT Volunter <a href="http://export-edge.com/contact/">(Edge-Export - Ireland)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">And then I decided to adventure myself in other country: Ireland. A different culture brought to me new expectations and it opened my mind. And I got a job in Edge-Export as volunteer. There I fixed the bugs in Edge-Export system control using VBA for Excel Advanced.</p>
+                                    <p class="text-muted">In order to expand my horizonts I decided to adventure myself into another country: Ireland. The different culture opened my mind to new expectations. While in Ireland I got a job in Edge-Export as volunteer. My task there was fixing bugs in Edge-Export system control using VBA for Excel Advanced.</p>
                                 </div>
                             </div>
                         </li>
@@ -230,7 +230,7 @@
                                     <h4 class="subheading">Software Analyst <a href="http://azix.com.br/">(Azix Consulting)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">After our projects have concluded in Equipaindustria I went to work with Azix. I participated of development of the Web Application of sanitation services registry, with capture, validation and standardization of field, rule checking address and all business rules defined by the customer. The service may include load data into operational bases of ERP, CRM with C#, ASP MVC, ASP.NET, DataLinq, Jquery, SQL SERVER 2008.</p>
+                                      <p class="text-muted">After completing the projects at Equipaindustria I went to work with Azix. There I participated in the development of the Web Applications for services registry sanitation with capture, validation and standardization of fields, rule checking address and all business rules defined by our clients. The developed web applications included loading of data into operational bases of ERP, CRM using C#, ASP MVC, ASP.NET, DataLinq, Jquery and SQL SERVER 2008.</p>
                                 </div>
                             </div>
                         </li>
@@ -244,7 +244,7 @@
                                     <h4 class="subheading">Software Analyst <a href="http://equipaindustria.com.br/">(Equipaindustria.com.br)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">After some years working with Pagina Viva I wanted to learn diferents techonologies, so I went to work for Equipaindustria. I have participated of developing e-commerce customizable and easy to use for our customers; our customers can have their own e-commerce without having to understand programming. Fully customizable and user friendly using ASP MVC, C#, SQL Server. I have developed internal systems and websites with ASP.Net, C#, Jquery, Fluent NHibernate and SQL SERVER 2008.(ETL) - Process DataBase (Excel, Txt) to our database with schedules in SQL Server. I also participated as internal quality auditor at the company <a href="http://taquions.com.br/">Taquions</a> (partner company of the Equipaindustria.com.br).</p>
+                                     <p class="text-muted">After some years working with Pagina Viva I wanted to learn diferents techonologies, so I went to work for Equipaindustria. I have participated in developing an e-commerce customizable and easy to use platform for our clients so that our clients could have their own e-commerce without having to understand programming. That platform was built using ASP MVC, C#, SQL Server. I have also developed internal systems and websites with ASP.Net, C#, Jquery, Fluent NHibernate and SQL SERVER 2008. In addition to that I have also performed ETL (extracting data from Excel/txt files, transforming it and loading it into SQL Server databases). Furthermore, I participated as an internal quality auditor at the company <a href="http://taquions.com.br/">Taquions</a> (partner company of the Equipaindustria.com.br).</p>
                                 </div>
                             </div>
                         </li>
@@ -258,7 +258,7 @@
                                     <h4 class="subheading">Developer <a href="http://paginaviva.com.br">(Pagina Viva CRM)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Here was my first job as development. In this small company I learned so much and I am very grateful for them. I was responsible for maintenance and administration Database SQL Server 2000/2005. I also participated of development and maintenance of CRM systems for Nestlé, Bombril, Procter & Gamble using ColdFusion, HTML, Jquery e CSS and of systems integration using VB.NET, ASP.NET and SQL Server. And scripts for extract data for marketing campaigns, generating reports to decision making business via Excel Advanced. Technologies used: Cold Fusion, Ajax, JavaScript, JQuery, VB.Net, ASP.Net, SQL Server 2000/2005, Excel VBA.</p>
+                                      <p class="text-muted">My first development job was at this small company where I learned so much and to whom I am very grateful. There I was responsible for SQL Server 2000/2005 database maintenance and administration. I also participated in the development and maintenance of CRM systems for Nestlé, Bombril, Procter & Gamble using the technologies ColdFusion, HTML, Jquery e CSS, SQL Server and Webservices. In addition, I have also performed systems integration using VB.NET, ASP.NET and SQL Server and data mining for marketing campaigns, generating reports for decision making business via Excel Advanced. Technologies used: Cold Fusion, Ajax, JavaScript, JQuery, VB.Net, ASP.Net, SQL Server 2000/2005, Excel VBA.</p>
                                 </div>
                             </div>
                         </li>
@@ -275,7 +275,7 @@
 									</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I am grateful for everything I have learned with my teachers and colleagues.</p>
+                                   <p class="text-muted">I am grateful for everything I have learned from my teachers and colleagues.</p>
                                 </div>
                             </div>
                         </li>
@@ -326,7 +326,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact me</h2>
-                    <h3 class="section-subheading text-muted">If you are looking this website by GIT Hub, so contatct me by my e-mail: greyce.amorim@yahoo.com.br</h3>
+                    <h3 class="section-subheading text-muted">If you are watching this website via GitHub repo contact me by my e-mail: greyce.amorim@yahoo.com.br</h3>
                 </div>
             </div>
             <div class="row">
