Changed the index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Background</h2>
-                    <h3 class="section-subheading text-muted">Below are my most important background, beyond them I also work with OO, MVC, AJAX, XML / XSLT, ColdFusion JSON, Web Services, SOAP, BPM Notation, EMC, MySql, etc.</h3>
+                    <h3 class="section-subheading text-muted">Below are my most important background skills, beyond them I also work with OO, MVC, AJAX, XML / XSLT, ColdFusion, JSON, Web Services, SOAP, BPM Notation, EMC, MySql, etc.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -107,7 +107,7 @@
                         <i class="fa fa-cubes fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">.NET</h4>
-                    <p class="text-muted">I am  over 6 years of experienced in development .NET development. What includes C#, VB.Net, ASP.NET and ASP MVC. I have developed desktop and web applications for big and small companies.
+                    <p class="text-muted">I am  over 5 years of experienced with .NET development. That includes C#, VB.Net, ASP.NET and ASP MVC. I have used these skills developing desktop and web applications for big and small companies.
 						</p>
                 </div>
                 <div class="col-md-4">
@@ -116,7 +116,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front End</h4>
-                    <p class="text-muted">In most of the projects I have worked I was usually full stack developer what gave me more than 6 years experienced with JavaScript. But also I was invited to be only FrontEnd developer in a specific project for managing bank accounts for Stefanini IT (São Paulo). In both cases I acquired a lot of knowledge with HTML / HTML5, CSS3, JavaScript, jQuery, ReactJS, Bootstrap and Materialize and I am always in search of more knowledge.</p>
+                     <p class="text-muted">I have mostly worked as a full stack developer giving me over 6 years experience with JavaScript. Recently, I was also invited to be the sole FrontEnd developer in a specific project for managing bank accounts while working for Stefanini IT (São Paulo). In both cases I acquired a lot of knowledge with HTML / HTML5, CSS3, JavaScript, jQuery, ReactJS, Bootstrap and Materialize.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -124,7 +124,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Databases</h4>
-                    <p class="text-muted">Database was also always a passion of mine, I have experience with maintenance and administration Database SQL Server 2000/2005, ETL and T-SQL. And scripts for generation and extraction for decision making of marketing manager.</p>
+                    <p class="text-muted">Databases have always been a passion of mine and I have experience with maintenance and administration of Database SQL Server 2000/2005, ETL and T-SQL. I also have experience in data mining and report generation for decision making by marketing managers.</p>
                 </div>
             </div>
         </div>
@@ -258,7 +258,7 @@
                                     <h4 class="subheading">Developer <a href="http://paginaviva.com.br">(Pagina Viva CRM)</a></h4>
                                 </div>
                                 <div class="timeline-body">
-                                      <p class="text-muted">My first development job was at this small company where I learned so much and to whom I am very grateful. There I was responsible for SQL Server 2000/2005 database maintenance and administration. I also participated in the development and maintenance of CRM systems for Nestlé, Bombril, Procter & Gamble using the technologies ColdFusion, HTML, Jquery e CSS, SQL Server and Webservices. In addition, I have also performed systems integration using VB.NET, ASP.NET and SQL Server and data mining for marketing campaigns, generating reports for decision making business via Excel Advanced. Technologies used: Cold Fusion, Ajax, JavaScript, JQuery, VB.Net, ASP.Net, SQL Server 2000/2005, Excel VBA.</p>
+                                      <p class="text-muted">My first development job was at this small company where I learned so much and to whom I am very grateful. There I was responsible for SQL Server 2000/2005 database maintenance and administration. I also participated in the development and maintenance of CRM systems for Nestlé, Bombril, Procter & Gamble using the technologies ColdFusion, HTML, Jquery, CSS, SQL Server and Webservices. In addition, I have also performed systems integration using VB.NET, ASP.NET and SQL Server and data mining for marketing campaigns, generating reports for decision making business via Excel Advanced. Technologies used: Cold Fusion, Ajax, JavaScript, JQuery, VB.Net, ASP.Net, SQL Server 2000/2005, Excel VBA.</p>
                                 </div>
                             </div>
                         </li>
