Changend the alt atributes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Here you will find all about my career and how I started working as IT development">
+    <meta name="author" content="Greyce Amorim">
 
     <title>Greyce's Resume</title>
 
@@ -145,7 +145,7 @@
                     <ul class="timeline">
 					<li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/cambridge.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/cambridge.jpg" alt="Cambridge">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -159,7 +159,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/laptop.jpg" alt="Laptop">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -173,7 +173,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/leader.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/leader.jpg" alt="Leader helping other person">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -194,7 +194,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/ireland2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/ireland.jpg" alt="Irish Cliffs">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -208,7 +208,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/flag-ireland.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/flag-ireland.jpg" alt="Ireland Flag">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -222,7 +222,7 @@
                         </li>
 						<li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/laptop.jpg" alt="Laptop">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -236,7 +236,7 @@
                         </li>
 						<li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/mountains.jpg" alt="Mountains">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -250,7 +250,7 @@
                         </li>
 						<li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/cliff-sunny.jpg" alt="cliff sunny">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -298,7 +298,7 @@
             <div class="row">
                 <div class="col-md-2 col-md-offset-5">
                     <div class="team-member">
-                        <img src="img/team/me.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/me.jpg" class="img-responsive img-circle" alt="My picture">
                         <h4>Greyce Bastos</h4>
                         <p class="text-muted"></p>
 						<p class="text-muted"></p>
